--- a/src/components/carousel/carousel.scss
+++ b/src/components/carousel/carousel.scss
@@ -12,19 +12,19 @@
     }
     .arrow {
         font-size: 30px;
-        color: black;
+        color: var(--orange);
         position: absolute;
         top: 44%;
         transform: translateY(-50%);
         cursor: pointer;
-        opacity: 0.5;
+        opacity: 0.8;
         z-index: 1;
         display: none;
         @include md {
             display: block;
         }
         &:hover {
-            opacity: 0.8;
+            opacity: 1;
         }
     }
     .carouselLeftNav {
